[package]
name = "mojiharau"
description = "Mokibake'd Zipfiles fixer"
authors = ["Michele Bianchi <MicheleBianchi@pm.me>"]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Jazzinghen/mojiharau"

[profile.release]
strip = true

[profile.test]
strip = true

[dependencies]
zip = ">=0.6"
clap = {version = ">=3.1", features = ["derive", "unicode"]}
encoding_rs = ">=0.8"
