[package]
name = "mojiharau"
description = "Mokibake'd Zipfiles fixer"
authors = ["Michele Bianchi <MicheleBianchi@pm.me>"]
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Jazzinghen/mojiharau"

[profile.release]
strip = true

[profile.test]
strip = true

[dependencies]
zip = ">=0.6"
clap = {version = ">=3.1", features = ["derive", "unicode"]}
encoding_rs = ">=0.8"
druid = { git = "https://github.com/linebender/druid.git", optional = true }

[features]
gui = ["dep:druid"]

[[bin]]
name = "mojiharau-gui"
required-features = ["gui"]
